assets/css/posts.css
.pageinator {
    display: inline-block;
    text-align: center;
    width: auto;
    vertical-align: top;
}

.sample-post-text {
    line-height: 1.5;
}

.sample-post-text p {
    font-size: 12pt;
}

.post-listing-card-container {
    position: inline-block;
    color: whitesmoke;
    vertical-align: top;

    padding: 1px;
    min-height: 450px;
    width: 364px;
    margin: 0px 7px 5px 7px;
}

.post-listing-card {
    /* position: inline-block; */
    position: relative;
    color: whitesmoke;

    transition: transform .2s;

    padding: 1px;

    overflow: hidden;
    text-align: left;
}

.post-listing-card:hover {
    transform: scale(1.03);
    border-top: solid #0dc200 2px;

    cursor: pointer;
}

.post-listing-card:hover a {
    color: #0dc200;
}

.post-listing-card img {
    overflow: hidden;
    object-fit: cover;
    vertical-align: middle;
    height: 240px;
    margin-bottom: 5px;
    width: 100%;
}

.post-listing-card h2 {
    padding: 0;
    margin: 0;
    font-size: 17pt;
    overflow: hidden;
}

.date-posted-stamp {
    padding: 0;
    margin: 5px 0px 10px 0px;
    font-style: oblique;
}

.date-posted-stamp p {
    font-size: 11pt;
}

.posts-header {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    z-index: 1;
    width: 100%;
    height: 50vh;
    max-height: 1000px;
    min-height: 290px;
    background: url('../img/primary/graph-contrast.png') no-repeat;

    position: relative;
    text-align: center;

    background-position: center center;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.posts-header-title {
    text-align: center;
    position: absolute;
    padding-bottom: 30px;

    bottom: 0;
    left: 0;
    right: 0;
}

.posts-header-title h1 {
    font-size: 45pt;
    /* font-weight: bold; */
    color: white;
    text-shadow: 3px 3px 1px black;
}

.posts-header-title h2 {
    font-style: oblique;
    font-size: 18pt;
    font-weight: bold;
    color: white;
    text-shadow: 2px 2px 1px black;
}

.posts-header-title p {
    color: whitesmoke;
    font-style: oblique;
    font-size: 18pt;
    font-weight: bold;
    text-shadow: 2px 2px 1px #0c557a;
}

.featured-posts-title {
    height: 100px;
    margin: 0 auto;
    width: 100%;
    position: relative;
    margin-bottom: 50px;
}

.featured-posts-title h2 {
    margin: 0;
    padding: 0;
    text-align: center;
    position: absolute;
    bottom: 0;
    padding-bottom: 10px;
}

.featured-posts-title:after {
    content: "";
    position: absolute;
    z-index: -1;
    bottom: 0;
    left: 0;
    height: 400px;
    width: 100%;
    transform: SkewY(6deg);
    transform-origin: bottom left;
    box-shadow: black 1px 1px 10px;
    background: inherit;
}

.take-me-home-a-btn {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    vertical-align: middle;
    border-radius: 25px;
    max-width: 300px;
    margin: 0 auto;
    text-align: center;
    background-color: #0c557a;
    box-shadow: black 1px 1px 10px;
}

.take-me-home-a-btn a {
    /* border-radius: 25%; */
    font-size: 18pt;
    padding: 25px;
    display: block;
    font-style: bold;
    height: 100%;
    width: 100%;
}

